Fix Bugs in HTML and CSS (P2)
Change all Ferry references to Buses in Bus page, fix the no-style issue of route boxes in Lines as well as removing unnecessary scrollbars in responsive functions of CSS pages.

--- a/Transcyclopedia/sanfrancisco/bus/css_assets/responsiveness_and_scrollbars.css
+++ b/Transcyclopedia/sanfrancisco/bus/css_assets/responsiveness_and_scrollbars.css
@@ -48,7 +48,7 @@
     }
 
     .window {
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 
     .info {
