--- a/Transcyclopedia/sanfrancisco/bus/css_assets/sf_buses.css
+++ b/Transcyclopedia/sanfrancisco/bus/css_assets/sf_buses.css
@@ -211,7 +211,7 @@ body::after {
     margin-bottom: 5px;
 }
 
-#route_bus, #line_for_each_departure_bus, #route_short {
+#route_entity, #line_for_each_departure_bus, #route_short {
     display: inline-block;
     width: fit-content;
     padding-left: 5px;
